# synthetic_youth_pilot

./: README.md  main.py  pyproject.toml  synthesize.py  test_analysis.py
src/: utils.py
