[project]
name = "synthetic_youth_pilot"
version = "0.1.0"
description = "Pilot study for using metasyn to synthesize YOUth data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asciibars>=0.0.3",
    "metasyn-disclosure>=0.2.0",
    "metasyn[extra]>=2.0.0",
    "polars>=1.27.1",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 100
